--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Welcome to the future site of Mundek's GitHub page.
+<h1>Welcome to the future site of Mundek's GitHub page.</h1>
+<p><a href="https://github.com/mundek" target="_blank">https://github.com/mundek</a>
+
