--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <h1>mundek's coding site</h1>
 <p>Welcome to this barebones page and the others senselessly linked to it.</p>
-<h3>If you want to see my coding efforts, look no further than the following links:</h3>
+<h3>If you want to see my coding efforts, look no further than the following repository and example deploys:</h3>
 <ul>
   <li><a href="https://github.com/mundek" target="_blank">https://github.com/mundek</a></li>
-  <li><a href="https://app.netlify.com/teams/mundek/" target="_blank">https://app.netlify.com/teams/mundek</a></li>
+  <li>Netlify deploys</li>
+  <ul>
+    <li><a href="https://svelte-spanish-accents.netlify.com/" target="_blank">svelte-spanish-accents</a></li>
+    <li><a href="https://svelte-spanish-numbers.netlify.com/" target="_blank">svelte-spanish-numbers</a></li>
+  </ul>
 </ul>
