--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <p>Welcome to this barebones page and the others senselessly linked to it.</p>
 <h3>If you want to see my coding efforts, look no further than the following repository and example deploys:</h3>
 <ul>
-  <li><a href="https://github.com/mundek" target="_blank">https://github.com/mundek</a></li>
+  <li><a href="https://github.com/mundek" target="_blank">GitHub repo</a></li>
   <li>Netlify deploys</li>
   <ul>
     <li><a href="https://svelte-spanish-accents.netlify.com/" target="_blank">svelte-spanish-accents</a></li>
     <li><a href="https://svelte-spanish-numbers.netlify.com/" target="_blank">svelte-spanish-numbers</a></li>
   </ul>
 </ul>
+Anyone interested in collaborating on (svelte-compiled but mostly vanilla) javascript apps for mechanical language learning tasks should contact me here. I've got lots of ideas, but only so much time after a full-time job and a family I want to spend time with.
