--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@
     <li><a href="https://svelte-spanish-numbers.netlify.com/" target="_blank">svelte-spanish-numbers</a></li>
   </ul>
 </ul>
-Anyone interested in collaborating on (svelte-compiled but mostly vanilla) javascript apps for mechanical language learning tasks should contact me here. I've got lots of ideas, but only so much time after a full-time job and a family I want to spend time with.
+Anyone interested in collaborating on (svelte-compiled but mostly vanilla) javascript apps for mechanical language learning tasks should indicate their interest through <a href="https://github.com/mundek" target="_blank">GitHub</a>. I've got lots of ideas, but only so much time after a full-time job and a family I want to spend time with.
