--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
-<h1>mundek's coding site</h1>
-<p>Welcome to this barebones page and the others senselessly linked to it.</p>
-<h3>If you want to see my coding efforts, look no further than the following repository and example deploys:</h3>
-<ul>
-  <li><a href="https://github.com/mundek" target="_blank">GitHub repo</a></li>
-  <li>Netlify deploys</li>
-  <ul>
-    <li><a href="https://svelte-spanish-accents.netlify.com/" target="_blank">svelte-spanish-accents</a></li>
-    <li><a href="https://svelte-spanish-numbers.netlify.com/" target="_blank">svelte-spanish-numbers</a></li>
-  </ul>
-</ul>
-Anyone interested in collaborating on (svelte-compiled but mostly vanilla) javascript apps for mechanical language learning tasks should indicate their interest through <a href="https://github.com/mundek" target="_blank">GitHub</a>. I've got lots of ideas, but only so much time after a full-time job and a family I want to spend time with.
+<!DOCTYPE html>
+  <head>
+    <title>It's always enthusiastic amateur hour at mundek's coding site!</title>
+  </head>
+  <body>
+    <h1>Mundek's Coding Site</h1>
+    <p>Welcome to this barebones page and the others it links to.</p>
+    <h3>If you want to see my coding efforts, look no further than the following repository and example deploys:</h3>
+    <ul>
+      <li><a href="https://github.com/mundek" target="_blank">GitHub repo</a></li>
+      <li>Netlify deploys</li>
+      <ul>
+        <li><a href="https://svelte-spanish-accents.netlify.com/" target="_blank">svelte-spanish-accents</a></li>
+        <li><a href="https://svelte-spanish-numbers.netlify.com/" target="_blank">svelte-spanish-numbers</a></li>
+      </ul>
+    </ul>
+    Anyone interested in collaborating on javascript apps (both svelte-compiled and vanilla) for mechanical language learning tasks should contact me through <a href="https://github.com/mundek" target="_blank">GitHub</a> or <a href="https://www.linkedin.com/in/raymond-meredith/" target="_blank">Linkedin</a>. I've got lots of ideas, but only so much time after a full-time job and a family I want to spend time with.
+  </body>
+</html>
