Fix broken Netlify links; add BIO 104 sim link

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
       <li><a href="https://github.com/mundek" target="_blank">GitHub repo</a></li>
       <li>Netlify deploys</li>
       <ul>
-        <li><a href="https://svelte-spanish-accents.netlify.com/" target="_blank">svelte-spanish-accents</a></li>
-        <li><a href="https://svelte-spanish-numbers.netlify.com/" target="_blank">svelte-spanish-numbers</a></li>
+        <li><a href="https://svelte-spanish-accents.netlify.app" target="_blank">svelte-spanish-accents</a></li>
+        <li><a href="https://svelte-spanish-numbers.netlify.app" target="_blank">svelte-spanish-numbers</a></li>
+        <li><a href="https://64ceaf24d8fb100008fb7eb3--bio-104-click-dots.netlify.app/" target="_blank">BIO 104 :: An Environmental Simulation</a></li>
+
       </ul>
     </ul>
     Anyone interested in collaborating on javascript apps (both svelte-compiled and vanilla) for mechanical language learning tasks should contact me through <a href="https://github.com/mundek" target="_blank">GitHub</a> or <a href="https://www.linkedin.com/in/raymond-meredith/" target="_blank">Linkedin</a>. I've got lots of ideas, but only so much time after a full-time job and a family I want to spend time with.
